[Task 32] Update some part of spring security.